// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the children inside it 1`] = `
<React.Fragment>
  <React.Fragment>
    <CustomHead />
    <div
      className="o-header"
    >
      <Logo
        className="o-header__logo"
      />
      <div
        className="c-header__account"
      >
        <div
          className="c-header__account-button"
        >
          <div
            className="c-header__account-label"
          >
            <Link
              href="/account/login"
            >
              <a>
                Account
              </a>
            </Link>
          </div>
        </div>
      </div>
      <Connect(MiniBag) />
      <span
        className="o-nav"
      >
        <Connect(NavBar) />
      </span>
      <span
        className="c-header__search"
      >
        <SearchBar>
          Content
        </SearchBar>
      </span>
    </div>
  </React.Fragment>
  <div
    className="o-body"
  >
    Content
  </div>
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</React.Fragment>
`;

exports[`renders the footer 1`] = `
<React.Fragment>
  <React.Fragment>
    <CustomHead />
    <div
      className="o-header"
    >
      <Logo
        className="o-header__logo"
      />
      <div
        className="c-header__account"
      >
        <div
          className="c-header__account-button"
        >
          <div
            className="c-header__account-label"
          >
            <Link
              href="/account/login"
            >
              <a>
                Account
              </a>
            </Link>
          </div>
        </div>
      </div>
      <Connect(MiniBag) />
      <span
        className="o-nav"
      >
        <Connect(NavBar) />
      </span>
      <span
        className="c-header__search"
      >
        <SearchBar />
      </span>
    </div>
  </React.Fragment>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</React.Fragment>
`;

exports[`renders the header 1`] = `
<React.Fragment>
  <React.Fragment>
    <CustomHead />
    <div
      className="o-header"
    >
      <Logo
        className="o-header__logo"
      />
      <div
        className="c-header__account"
      >
        <div
          className="c-header__account-button"
        >
          <div
            className="c-header__account-label"
          >
            <Link
              href="/account/login"
            >
              <a>
                Account
              </a>
            </Link>
          </div>
        </div>
      </div>
      <Connect(MiniBag) />
      <span
        className="o-nav"
      >
        <Connect(NavBar) />
      </span>
      <span
        className="c-header__search"
      >
        <SearchBar />
      </span>
    </div>
  </React.Fragment>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</React.Fragment>
`;

exports[`renders the navbar 1`] = `
<React.Fragment>
  <React.Fragment>
    <CustomHead />
    <div
      className="o-header"
    >
      <Logo
        className="o-header__logo"
      />
      <div
        className="c-header__account"
      >
        <div
          className="c-header__account-button"
        >
          <div
            className="c-header__account-label"
          >
            <Link
              href="/account/login"
            >
              <a>
                Account
              </a>
            </Link>
          </div>
        </div>
      </div>
      <Connect(MiniBag) />
      <span
        className="o-nav"
      >
        <Connect(NavBar) />
      </span>
      <span
        className="c-header__search"
      >
        <SearchBar />
      </span>
    </div>
  </React.Fragment>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</React.Fragment>
`;
